# imap-client

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md
src/: CMakeLists.txt  connection.cpp  connection.h  imap_client.cpp  imap_client.h  main.cpp  ssl_connection.cpp  ssl_connection.h  tcp_connection.cpp  tcp_connection.h
